--- a/base/footer.html
+++ b/base/footer.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="/css/base/footer.css" />
+  </head>
 
-<head>
-  <link rel="stylesheet" href="/css/base/footer.css">
-</head>
-
-<body>
-  <footer>
-    <div class="inner-footer">
-      <div class="drops">
-        <a class="drop" href="/#header"><img src="/img/home.png"></a>
-        <a class="drop" href="/#dyalog-apl"><img src="/img/dyalog-apl.png"></a>
-        <a class="drop" href="/#contact-me"><img src="/img/contact-me.png"></a>
-        <a class="drop" href="https://github.com/Masterquiz/" target='blank'><img src="/img/github.png"></a>
+  <body>
+    <footer>
+      <div class="inner-footer">
+        <div class="drops">
+          <a class="drop" href="/#header"><img src="/img/home.png" /></a>
+          <a class="drop" href="/#dyalog-apl"><img src="/img/dyalog-apl.png" /></a>
+          <a class="drop" href="/#contact-me"><img src="/img/contact-me.png" /></a>
+          <a class="drop" href="https://github.com/Masterquiz/" target="blank"
+            ><img src="/img/github.png"
+          /></a>
+        </div>
+        <div class="quick-links">
+          <ul>
+            <li class="quick-items"><a href="/#header">Home</a></li>
+            <li class="quick-items"><a href="/#dyalog-apl">Dyalog APL</a></li>
+            <li class="quick-items"><a href="/#contact-me">Contact me</a></li>
+            <li class="quick-items">
+              <a href="https://github.com/Masterquiz/" target="blank">GitHub</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="quick-links">
-        <ul>
-          <li class="quick-items"><a href="/#header">Home</a></li>
-          <li class="quick-items"><a href="/#dyalog-apl">Dyalog APL</a></li>
-          <li class="quick-items"><a href="/#contact-me">Contact me</a></li>
-          <li class="quick-items"><a href="https://github.com/Masterquiz/" target='blank'>GitHub</a></li>
-        </ul>
-      </div>
-    </div>
 
-    <div class="outer-footer">
-      Copyright &copy; Master quiz. All right reserved
-    </div>
-  </footer>
-</body>
-
+      <div class="outer-footer">Copyright &copy; Master quiz. All right reserved</div>
+    </footer>
+  </body>
 </html>
