--- a/base/logic_games_nav.html
+++ b/base/logic_games_nav.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="/css/base/nav.css" />
+  </head>
 
-<head>
-  <link rel="stylesheet" href="/css/base/nav.css">
-</head>
-
-<body>
-  <nav>
-    <ul class="pages">
-      <li><a href="/apl/logic_games/">Logic Games</a></li>
-      <li><a href="/apl/animations/">Animations</a></li>
-    </ul>
-  </nav>
-</body>
-
+  <body>
+    <nav>
+      <ul class="pages">
+        <li><a href="/apl/logic_games/">Logic Games</a></li>
+        <li><a href="/apl/animations/">Animations</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
