--- a/base/header.html
+++ b/base/header.html
@@ -19,20 +19,24 @@
       <a href="/#home" class="name">Master Quiz</a>
 
       <nav class="navbar">
-        <div class="hamMQ">
-          <label>MQ</label>
-          <span class="bar1MQ"></span>
-          <span class="bar2MQ"></span>
-          <span class="bar3MQ"></span>
-        </div>
         <div class="ham">
+          <label>MQ</label>
           <span class="bar1"></span>
           <span class="bar2"></span>
           <span class="bar3"></span>
         </div>
         <ul class="menu">
-          <li><a href="/#dyalog-apl">Dyalog APL</a></li>
-          <li><a href="/#contact-me">Contact Me</a></li>
+          <li class="item"><a href="/#blog">Blog</a></li>
+          <li class="item"><a href="/#dyalog-apl">Dyalog APL</a></li>
+          <ul class="sub-menu">
+            <li class="sub-item"><a href="/apl/logic_games/tree.html">Tree</a></li>
+            <li class="sub-item">
+              <a href="/apl/logic_games/electric_charges.html">Electric charges</a>
+            </li>
+            <li class="sub-item"><a href="/apl/logic_games/hitori.html">Hitori</a></li>
+            <li class="sub-item"><a href="/apl/logic_games/save_the_cow.html">Save the cow</a></li>
+          </ul>
+          <li class="item"><a href="/#contact-me">Contact Me</a></li>
         </ul>
       </nav>
     </header>
