--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Master Quiz</title>
 
     <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/dyalog-apl.css" />
-    <link rel="stylesheet" href="/css/contact_me.css" />
 
     <script src="/js/script.js"></script>
     <script>
@@ -30,53 +28,59 @@
 
     <main>
       <section id="dyalog-apl" class="dyalog-apl">
-        <h1>Dyalog APL</h1>
-        <section class="text-block">
-          <h2>What is APL?</h2>
-          <div class="center-quote">
-            <blockquote>
-              <p>APL is an <u>array-oriented</u> programming language.</p>
-              <p>
-                Its natural, concise syntax lets you develop
-                <u>shorter programs</u> while <u>thinking more</u>
-                about the problem you're trying to solve than how to express it to a computer.
-              </p>
-            </blockquote>
-          </div>
-          <a href="https://aplwiki.com" target="blank">~APL wiki</a>
-        </section>
-        <section class="text-block">
-          <h2>What can you find in this section?</h2>
-          <div class="cards">
-            <a class="card" href="/apl/logic_games/">
-              <h2>Logic game</h2>
-              <p>In this section you'll find logic game solvers of several ones</p>
-              <ol>
-                <li>Tree</li>
-                <li>Electric charges</li>
-                <li>Hitori</li>
-                <li>Save the cow</li>
-              </ol>
-              <p>Try them!</p>
-            </a>
+        <div class="center">
+          <h1>Dyalog APL</h1>
+        </div>
+        <div class="text-block">
+          <blockquote>
+            <p>APL is an <u>array-oriented</u> programming language.</p>
+            <p>
+              Its natural, concise syntax lets you develop
+              <u>shorter programs</u> while <u>thinking more</u>
+              about the problem you're trying to solve than how to express it to a computer.
+            </p>
+          </blockquote>
+          <div class="center"><a href="https://aplwiki.com" target="blank">~APL wiki</a></div>
 
-            <a class="card" href="/apl/animations/">
-              <h2>Animations</h2>
-              <p>Have you ever wanted to animate an image made with characters?</p>
-              <p>Now you can, add a <u>Christmas animation</u> to whatever you want!</p>
-              <p>Otherwise check the <u>Happy New Year</u> animation.</p>
-            </a>
+          <div class="container">
+            <div>
+              <h2><a href="#blog">Blog</a></h2>
+              <p>
+                Curious about what's behind the site? Here you can find the <u>functions</u> that
+                are <u>executed in the backend</u> to create or solve a logic game puzzle or to
+                animate an image.
+              </p>
+            </div>
+
+            <div>
+              <h2><a href="/apl/logic_games/index.html">Logic game</a></h2>
+              <p>
+                In this section you'll find logic game solvers of several type. Just check them up!
+                You can play around with <u>Tree</u>, <u>Electric charges</u>,
+                <u>Save the cow</u> and <u>Hitori</u>.
+              </p>
+            </div>
+
+            <div>
+              <h2><a href="/apl/animations/index.html">Animations</a></h2>
+              <p>
+                Have you ever wanted to animate an image made with characters? Now you can, add a
+                <u>Christmas animation</u> to whatever you want! Otherwise check the
+                <u>Happy New Year</u> animation.
+              </p>
+            </div>
           </div>
-        </section>
+        </div>
       </section>
 
       <div id="contact-me">
         <div class="contact-box">
           <section>
             <h2>Contact Me</h2>
-            <p>Noticed a <u>bug</u>,</p>
-            <p>or have anything to <u>suggest</u>?</p>
-            <p>Please, <u>let me know</u> with an email.</p>
+            <p>
+              Noticed a <u>bug</u>, or have anything to <u>suggest</u>? Please,
+              <u>let me know</u> with an email.
+            </p>
           </section>
           <form action="https://formsubmit.co/67f2dabb477f56ac1c41d324c50c6677" method="POST">
             <input name="name" placeholder="Your Name" maxlength="32" pattern="\S+.*" required />
