--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div>
               <h2><a href="/apl/logic_games/index.html">Logic game</a></h2>
               <p>
-                In this section you'll find logic game solvers of several type. Just check them up!
+                In this section you'll find logic game solvers of several type. Just check them out!
                 You can play around with <u>Tree</u>, <u>Electric charges</u>,
                 <u>Save the cow</u> and <u>Hitori</u>.
               </p>
