--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           <div class="center"><a href="https://aplwiki.com" target="blank">~APL wiki</a></div>
 
           <div class="container">
-            <div>
+            <!-- <div>
               <h2><a href="#blog">Blog</a></h2>
               <p>
                 Curious about what's behind the site? Here you can find the <u>functions</u> that
                 are <u>executed in the backend</u> to create or solve a logic game puzzle or to
                 animate an image.
               </p>
-            </div>
+            </div> -->
 
             <div>
               <h2><a href="/apl/logic_games/index.html">Logic game</a></h2>
