--- a/base/header.html
+++ b/base/header.html
@@ -26,15 +26,11 @@
           <span class="bar3"></span>
         </div>
         <ul class="menu">
-          <li class="item"><a href="/#blog">Blog</a></li>
+          <!-- <li class="item"><a href="/#blog">Blog</a></li> -->
           <li class="item"><a href="/#dyalog-apl">Dyalog APL</a></li>
           <ul class="sub-menu">
-            <li class="sub-item"><a href="/apl/logic_games/tree.html">Tree</a></li>
-            <li class="sub-item">
-              <a href="/apl/logic_games/electric_charges.html">Electric charges</a>
-            </li>
-            <li class="sub-item"><a href="/apl/logic_games/hitori.html">Hitori</a></li>
-            <li class="sub-item"><a href="/apl/logic_games/save_the_cow.html">Save the cow</a></li>
+            <li class="sub-item"><a href="/apl/logic_games/">Logic games</a></li>
+            <li class="sub-item"><a href="/apl/animations/">Animations</a></li>
           </ul>
           <li class="item"><a href="/#contact-me">Contact Me</a></li>
         </ul>
