Button bug on mobile

--- a/apl/logic_games/trees.html
+++ b/apl/logic_games/trees.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Master Quiz - Tree</title>
+    <title>Master Quiz - Trees</title>
 
     <link rel="stylesheet" href="/css/apl/logic_games/puzzle.css" />
 
     <script src="/js/apl/apl.js" defer></script>
     <script src="/js/apl/logic_games/puzzle_utils.js" defer></script>
-    <script src="/js/apl/logic_games/tree.js" defer></script>
+    <script src="/js/apl/logic_games/trees.js" defer></script>
 
     <script src="/js/script.js"></script>
   </head>
@@ -18,7 +18,7 @@
     <section id="nav"></section>
 
     <main>
-      <h1>Tree solver</h1>
+      <h1>Trees solver</h1>
 
       <div class="cards">
         <section class="input">
