--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </div>
         <div class="text-block">
           <blockquote>
-            <p>APL is an <u>array-oriented</u> programming language.</p>
+            <p>APL is an <span>array-oriented</span> programming language.</p>
             <p>
               Its natural, concise syntax lets you develop
-              <u>shorter programs</u> while <u>thinking more</u>
+              <span>shorter programs</span> while <span>thinking more</span>
               about the problem you're trying to solve than how to express it to a computer.
             </p>
           </blockquote>
@@ -46,18 +46,18 @@
             <!-- <div>
               <h2><a href="#blog">Blog</a></h2>
               <p>
-                Curious about what's behind the site? Here you can find the <u>functions</u> that
-                are <u>executed in the backend</u> to create or solve a logic game puzzle or to
-                animate an image.
+                Curious about what's behind the site? Here you can find the
+                <span>functions</span> that are <span>executed in the backend</span> to create or
+                solve a logic game puzzle or to animate an image.
               </p>
             </div> -->
 
             <div>
               <h2><a href="/apl/logic_games/index.html">Logic game</a></h2>
               <p>
-                In this section you'll find logic game solvers of several types. Just check them out!
-                You can play around with <u>Tree</u>, <u>Electric charges</u>,
-                <u>Save the cow</u> and <u>Hitori</u>.
+                In this section you'll find logic game solvers of several types. Just check them
+                out! You can play around with <span>Trees</span>, <span>Electric charges</span>,
+                <span>Save the cow</span> and <span>Hitori</span>.
               </p>
             </div>
 
@@ -65,8 +65,8 @@
               <h2><a href="/apl/animations/index.html">Animations</a></h2>
               <p>
                 Have you ever wanted to animate an image made with characters? Now you can, add a
-                <u>Christmas animation</u> to whatever you want! Otherwise check the
-                <u>Happy New Year</u> animation.
+                <span>Christmas animation</span> to whatever you want! Otherwise check the
+                <span>Happy New Year</span> animation.
               </p>
             </div>
           </div>
@@ -78,8 +78,8 @@
           <section>
             <h2>Contact Me</h2>
             <p>
-              Noticed a <u>bug</u>, or have anything to <u>suggest</u>? Please,
-              <u>let me know</u> with an email.
+              Noticed a <span>bug</span>, or have anything to <span>suggest</span>? Please,
+              <span>let me know</span> with an email.
             </p>
           </section>
           <form action="https://formsubmit.co/67f2dabb477f56ac1c41d324c50c6677" method="POST">
